--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "predeploy": "cd example && yarn install && yarn run build",
     "deploy": "gh-pages -d example/build"
   },
-  "dependencies": {},
+  "dependencies": {
+    "react-use-event-hook": "^0.9.1"
+  },
   "peerDependencies": {
     "react": "^16.9.0"
   },
@@ -39,12 +41,13 @@
     "@types/react": "^16.7.22",
     "cross-env": "^5.2.0",
     "gh-pages": "^2.0.1",
+    "prettier": "^2.6.2",
     "react": "^16.9.0",
     "react-scripts": "^3.4.0",
     "react-test-renderer": "^16.9.0",
     "rollup": "^2.26.9",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "tslib": "^2.0.1",
-    "typescript": "^3.2.4"
+    "typescript": "^4.6.4"
   }
 }
